--- a/rock-paper-scissors/rock-paper-scissors.css
+++ b/rock-paper-scissors/rock-paper-scissors.css
@@ -25,14 +25,22 @@ body{
     height: 50px;
     width: 50px;
 }
-.reset-button{
-    border: none;
+.reset-button,
+.auto-button{
+    border: 2px solid;
+    border-color: rgb(0, 0, 0);
     color: black;
+    border-radius: 7px;
     background-color: rgb(250, 250, 250);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     padding: 10px 20px;
     cursor: pointer;
+    margin-bottom: 10px;
+}
+.auto-button{
+    padding-left: 26px;
+    padding-right: 26px;
 }
 .game-body-section{
     
